# kot-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
docs/: RELEASE.md
scripts/: sign-build.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  manifest.rs  process_checker.rs  updater.rs
src/components/: ProgressBar.tsx  TitleBar.tsx
src/hooks/: useTauri.ts
